Se refactorizo la tienda para que el estilo de productos sea consistente entre ellos

--- a/front/agregados.html
+++ b/front/agregados.html
@@ -51,58 +51,113 @@
 </nav>
 
 <br>
-<div class="row row-cols-1 row-cols-md-3 g-4">
+<div class="row row-cols-1 row-cols-md-3 g-4 align-items-stretch">
+  <!-- Card 1 -->
   <div class="col">
-    <div class="card">
-      <img src="./img/agregados/cacao.webp" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Cáscara de Cacao</h5>
-        <p class="card-text">Agregado natural para el mate, aporta un sabor suave a chocolate y un aroma inconfundible.</p>
-        <p> <strong>$2.500 (100g)</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/agregados/cacao.webp" class="card-img-top" alt="Cáscara de Cacao">
+        <div class="card-body">
+          <h5 class="card-title">Cáscara de Cacao (100gr)</h5>
+          <p class="card-text">Agregado natural para el mate, aporta un sabor suave a chocolate y un aroma inconfundible.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$2.500</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
+
+  <!-- Card 2 -->
   <div class="col">
-    <div class="card">
-      <img src="./img/agregados/coco.webp" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Chips de Coco</h5>
-        <p class="card-text">Láminas de coco deshidratado. Aportan dulzura y un toque tropical al mate.</p>
-        <p> <strong>$3.000 (100g)</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/agregados/coco.webp" class="card-img-top" alt="Chips de Coco">
+        <div class="card-body">
+          <h5 class="card-title">Chips de Coco (100gr)</h5>
+          <p class="card-text">Láminas de coco deshidratado. Aportan dulzura y un toque tropical al mate.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$3.000</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
+
+  <!-- Card 3 -->
   <div class="col">
-    <div class="card">
-      <img src="./img/agregados/Jengibre.webp" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Jengibre Deshidratado</h5>
-        <p class="card-text">Jengibre molido en trozos pequeños. Brinda un sabor picante y energizante al mate.</p>
-        <p> <strong>$2.800 (100g)</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/agregados/Jengibre.webp" class="card-img-top" alt="Jengibre Deshidratado">
+        <div class="card-body">
+          <h5 class="card-title">Jengibre Deshidratado (100gr)</h5>
+          <p class="card-text">Jengibre molido en trozos pequeños. Brinda un sabor picante y energizante al mate.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$2.800</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
+
+  <!-- Card 4 -->
   <div class="col">
-    <div class="card">
-      <img src="./img/agregados/pack de agregados.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Pack Blend Malaya (Menta, Limón, Jengibre y Pétalos de Rosa)</h5>
-        <p class="card-text">Combinación de hierbas refrescantes y florales que equilibran frescura y aroma. Ideal para mates suaves y aromáticos.</p>
-        <p> <strong>$6.500</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/agregados/pack de agregados.jpg" class="card-img-top" alt="Pack Blend Malaya (Menta, Limón, Jengibre y Pétalos de Rosa)">
+        <div class="card-body">
+          <h5 class="card-title">Pack Blend Malaya (Menta, Limón, Jengibre y Pétalos de Rosa)</h5>
+          <p class="card-text">Combinación de hierbas refrescantes y florales que equilibran frescura y aroma. Ideal para mates suaves y aromáticos.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$6.500</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
+
+  <!-- Card 5 -->
   <div class="col">
-    <div class="card">
-      <img src="./img/agregados/pack de agregados2.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Pack Blend Malaya (Boldo, Cedrón, Caléndula y Canela)</h5>
-        <p class="card-text">Mezcla digestiva con notas especiadas y herbales. Excelente para un mate relajante.</p>
-        <p> <strong>$6.500</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/agregados/pack de agregados2.jpg" class="card-img-top" alt="Pack Blend Malaya (Boldo, Cedrón, Caléndula y Canela)">
+        <div class="card-body">
+          <h5 class="card-title">Pack Blend Malaya (Boldo, Cedrón, Caléndula y Canela)</h5>
+          <p class="card-text">Mezcla digestiva con notas especiadas y herbales. Excelente para un mate relajante.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$6.500</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
