--- a/front/bombilla_mate.html
+++ b/front/bombilla_mate.html
@@ -51,108 +51,218 @@
 </nav>
 
 <br>
-<div class="row row-cols-1 row-cols-md-3 g-4">
+<div class="row row-cols-1 row-cols-md-3 g-4 align-items-stretch">
+  <!-- Card 1 -->
   <div class="col">
-    <div class="card">
-      <img src="./img/bombilla/bombilla1.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Bombilla Clásica Lisa</h5>
-        <p class="card-text">Bombilla recta de acero inoxidable con aro dorado.</p>
-        <p> <strong>$4.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/bombilla/bombilla1.jpeg" class="card-img-top" alt="Bombilla Clásica Lisa">
+        <div class="card-body">
+          <h5 class="card-title">Bombilla Clásica Lisa</h5>
+          <p class="card-text">Bombilla recta de acero inoxidable con aro dorado.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$4.000</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
+
+  <!-- Card 2 -->
   <div class="col">
-    <div class="card">
-      <img src="./img/bombilla/bombilla2.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Bombilla de Acero con Filtro Cuchara</h5>
-        <p class="card-text">Modelo de acero inoxidable con filtro tipo cuchara desmontable.</p>
-        <p> <strong>$5.500</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/bombilla/bombilla2.jpeg" class="card-img-top" alt="Bombilla de Acero con Filtro Cuchara">
+        <div class="card-body">
+          <h5 class="card-title">Bombilla de Acero con Filtro Cuchara</h5>
+          <p class="card-text">Modelo de acero inoxidable con filtro tipo cuchara desmontable.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$5.500</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
-   <div class="col">
-    <div class="card">
-      <img src="./img/bombilla/bombilla3.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Bombilla Pico Plano Tradicional</h5>
-        <p class="card-text">Bombilla curva de acero y bronce, con filtro plano ranurado.</p>
-        <p> <strong>$6.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+
+  <!-- Card 3 -->
+  <div class="col">
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/bombilla/bombilla3.jpeg" class="card-img-top" alt="Bombilla Pico Plano Tradicional">
+        <div class="card-body">
+          <h5 class="card-title">Bombilla Pico Plano Tradicional</h5>
+          <p class="card-text">Bombilla curva de acero y bronce, con filtro plano ranurado.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$6.000</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
-   <div class="col">
-    <div class="card">
-      <img src="./img/bombilla/bombilla4.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Bombilla Premium Grabada</h5>
-        <p class="card-text">Bombilla artesanal de alpaca y bronce con grabados.</p>
-        <p> <strong>$9.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+
+  <!-- Card 4 -->
+  <div class="col">
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/bombilla/bombilla4.jpeg" class="card-img-top" alt="Bombilla Premium Grabada">
+        <div class="card-body">
+          <h5 class="card-title">Bombilla Premium Grabada</h5>
+          <p class="card-text">Bombilla artesanal de alpaca y bronce con grabados.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$9.000</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
-   <div class="col">
-    <div class="card">
-      <img src="./img/bombilla/bombilla5.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Bombilla con Filtro Cuchara Larga</h5>
-        <p class="card-text">Bombilla de acero inoxidable, filtro cuchara alargado y desmontable.</p>
-        <p> <strong>$6.500</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+
+  <!-- Card 5 -->
+  <div class="col">
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/bombilla/bombilla5.jpeg" class="card-img-top" alt="Bombilla con Filtro Cuchara Larga">
+        <div class="card-body">
+          <h5 class="card-title">Bombilla con Filtro Cuchara Larga</h5>
+          <p class="card-text">Bombilla de acero inoxidable, filtro cuchara alargado y desmontable.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$6.500</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
-   <div class="col">
-    <div class="card">
-      <img src="./img/bombilla/bombilla6.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Bombilla Bolitas de Acero</h5>
-        <p class="card-text">Bombilla de diseño especial con esferas decorativas y filtro esférico.</p>
-        <p> <strong>$7.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+
+  <!-- Card 6 -->
+  <div class="col">
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/bombilla/bombilla6.jpeg" class="card-img-top" alt="Bombilla Bolitas de Acero">
+        <div class="card-body">
+          <h5 class="card-title">Bombilla Bolitas de Acero</h5>
+          <p class="card-text">Bombilla de diseño especial con esferas decorativas y filtro esférico.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$7.000</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
-   <div class="col">
-    <div class="card">
-      <img src="./img/bombilla/bombilla7.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Bombilla Pico Plano Curva</h5>
-        <p class="card-text">Bombilla de acero curvada con filtro plano. Robusta, ideal para yerbas intensas.</p>
-        <p> <strong>$5.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+
+  <!-- Card 7 -->
+  <div class="col">
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/bombilla/bombilla7.jpeg" class="card-img-top" alt="Bombilla Pico Plano Curva">
+        <div class="card-body">
+          <h5 class="card-title">Bombilla Pico Plano Curva</h5>
+          <p class="card-text">Bombilla de acero curvada con filtro plano. Robusta, ideal para yerbas intensas.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$5.000</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
-   <div class="col">
-    <div class="card">
-      <img src="./img/bombilla/bombilla8.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Bombilla con Rosca y Platillo</h5>
-        <p class="card-text">Bombilla con sistema a rosca y platillo desmontable para evitar derrames. Innovadora y práctica.</p>
-        <p> <strong>$7.500</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+
+  <!-- Card 8 -->
+  <div class="col">
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/bombilla/bombilla8.jpeg" class="card-img-top" alt="Bombilla con Rosca y Platillo">
+        <div class="card-body">
+          <h5 class="card-title">Bombilla con Rosca y Platillo</h5>
+          <p class="card-text">Bombilla con sistema a rosca y platillo desmontable para evitar derrames. Innovadora y práctica.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$7.500</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
-   <div class="col">
-    <div class="card">
-      <img src="./img/bombilla/bombilla9.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Bombilla de acero con Punta Metálica</h5>
-        <p class="card-text">Bombilla artesanal hecha de acero torneada, con boquilla metálica.</p>
-        <p> <strong>$5.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+
+  <!-- Card 9 -->
+  <div class="col">
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/bombilla/bombilla9.png" class="card-img-top" alt="Bombilla de acero con Punta Metálica">
+        <div class="card-body">
+          <h5 class="card-title">Bombilla de acero con Punta Metálica</h5>
+          <p class="card-text">Bombilla artesanal hecha de acero torneada, con boquilla metálica.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$5.000</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
-   <div class="col">
-    <div class="card">
-      <img src="./img/bombilla/bombilla10.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Bombilla de Hierro con Pico Redondo</h5>
-        <p class="card-text">Bombilla sencilla de hierro con filtro esférico en la base. Estilo económico y funcional.</p>
-        <p> <strong>$2.500</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+
+  <!-- Card 10 -->
+  <div class="col">
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/bombilla/bombilla10.png" class="card-img-top" alt="Bombilla de Hierro con Pico Redondo">
+        <div class="card-body">
+          <h5 class="card-title">Bombilla de Hierro con Pico Redondo</h5>
+          <p class="card-text">Bombilla sencilla de hierro con filtro esférico en la base. Estilo económico y funcional.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$2.500</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
