--- a/front/tienda.html
+++ b/front/tienda.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-success p-3">
@@ -51,58 +51,123 @@
 </nav>
 
 <br>
-<div class="row row-cols-1 row-cols-md-3 g-4">
+<div class="row row-cols-1 row-cols-md-3 g-4 align-items-stretch">
+  <!-- Card 1 -->
   <div class="col">
-    <div class="card">
-      <img src="./img/agregados/Jengibre.webp" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Jengibre Deshidratado</h5>
-        <p class="card-text">Jengibre molido en trozos pequeños. Brinda un sabor picante y energizante al mate.</p>
-        <p> <strong>$2.800 (100g)</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/agregados/Jengibre.webp" class="card-img-top" alt="Jengibre Deshidratado">
+        <div class="card-body">
+          <h5 class="card-title">Jengibre Deshidratado (100gr)</h5>
+          <p class="card-text">
+            Jengibre molido en trozos pequeños. Brinda un sabor picante y energizante al mate.
+          </p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$2.500</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
+
+  <!-- Card 2 -->
   <div class="col">
-    <div class="card">
-      <img src="./img/bombilla/bombilla5.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Bombilla con Filtro Cuchara Larga</h5>
-        <p class="card-text">Bombilla de acero inoxidable, filtro cuchara alargado y desmontable.</p>
-        <p> <strong>$6.500</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/bombilla/bombilla5.jpeg" class="card-img-top" alt="Bombilla con Filtro Cuchara Larga">
+        <div class="card-body">
+          <h5 class="card-title">Bombilla con Filtro Cuchara Larga</h5>
+          <p class="card-text">
+            Bombilla de acero inoxidable, filtro cuchara alargado y desmontable.
+          </p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$6.500</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
+
+  <!-- Card 3 -->
   <div class="col">
-    <div class="card">
-      <img src="./img/kits completos de mate/kits completos de mate9.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Kit Matero Verde Militar Premium</h5>
-        <p class="card-text">Incluye bolso reforzado estilo mochila, termo de acero, yerbero, mate de madera, bombilla y azucarero.</p>
-        <p> <strong>$36.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/kits completos de mate/kits completos de mate9.jpeg" class="card-img-top" alt="Kit Matero Verde Militar Premium">
+        <div class="card-body">
+          <h5 class="card-title">Kit Matero Verde Militar Premium</h5>
+          <p class="card-text">
+            Incluye bolso reforzado estilo mochila, termo de acero, yerbero, mate de madera, bombilla y azucarero.
+          </p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$36.000</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
+
+  <!-- Card 4 -->
   <div class="col">
-    <div class="card">
-      <img src="./img/yerba/yerba10.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Yerba Jesper a Granel</h5>
-        <p class="card-text">Yerba mate en presentación de bolsa grande para consumo masivo. Sabor intenso, ideal para bares o familias numerosas.</p>
-        <p> <strong>$22.000 (bolsa 10kg)</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/yerba/yerba10.jpeg" class="card-img-top" alt="Yerba Jesper a Granel">
+        <div class="card-body">
+          <h5 class="card-title">Yerba Jesper a Granel</h5>
+          <p class="card-text">
+            Yerba mate en presentación de bolsa grande para consumo masivo. Sabor intenso, ideal para bares o familias numerosas.
+          </p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$22.000 (bolsa 10kg)</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
+
+  <!-- Card 5 -->
   <div class="col">
-    <div class="card">
-      <img src="./img/mate/mate10.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Mate de cerámica blanco</h5>
-        <p class="card-text">Mate de cerámica esmaltada de forma redonda.</p>
-        <p> <strong>$12.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/mate/mate10.png" class="card-img-top" alt="Mate de cerámica blanco">
+        <div class="card-body">
+          <h5 class="card-title">Mate de cerámica blanco</h5>
+          <p class="card-text">
+            Mate de cerámica esmaltada de forma redonda.
+          </p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$12.000</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
