--- a/front/mate.html
+++ b/front/mate.html
@@ -50,108 +50,219 @@
   </div>
 </nav>
 <br>
-<div class="row row-cols-1 row-cols-md-3 g-4">
+
+<div class="row row-cols-1 row-cols-md-3 g-4 align-items-stretch">
+  <!-- Card 1 -->
   <div class="col">
-    <div class="card">
-      <img src="./img/mate/mate1.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Mate de madera con caja</h5>
-        <p class="card-text">Mate de madera torneada, con virola de acero inoxidable.</p>
-        <p> <strong>$15.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/mate/mate1.jpeg" class="card-img-top" alt="Mate de madera con caja">
+        <div class="card-body">
+          <h5 class="card-title">Mate de madera con caja</h5>
+          <p class="card-text">Mate de madera torneada, con virola de acero inoxidable.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$15.000</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
+
+  <!-- Card 2 -->
   <div class="col">
-    <div class="card">
-      <img src="./img/mate/mate3.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Mate Stanley azul</h5>
-        <p class="card-text">Mate térmico Stanley en color azul pastel con virola dorada.</p>
-        <p> <strong>$20.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/mate/mate3.jpeg" class="card-img-top" alt="Mate Stanley azul">
+        <div class="card-body">
+          <h5 class="card-title">Mate Stanley azul</h5>
+          <p class="card-text">Mate térmico Stanley en color azul pastel con virola dorada.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$20.000</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
+
+  <!-- Card 3 -->
   <div class="col">
-    <div class="card">
-      <img src="./img/mate/mate2.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Mate metálico dorado martillado</h5>
-        <p class="card-text">Mate de acero inoxidable color dorado con acabado martillado.</p>
-        <p> <strong>$18.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/mate/mate2.jpeg" class="card-img-top" alt="Mate metálico dorado martillado">
+        <div class="card-body">
+          <h5 class="card-title">Mate metálico dorado martillado</h5>
+          <p class="card-text">Mate de acero inoxidable color dorado con acabado martillado.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$18.000</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
+
+  <!-- Card 4 -->
   <div class="col">
-    <div class="card">
-      <img src="./img/mate/mate4.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Mate forrado en cuero lila</h5>
-        <p class="card-text">Mate de calabaza forrado en cuero teñido de color lila, con virola metálica decorada en relieve.</p>
-        <p> <strong>$14.500</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/mate/mate4.jpeg" class="card-img-top" alt="Mate forrado en cuero lila">
+        <div class="card-body">
+          <h5 class="card-title">Mate forrado en cuero lila</h5>
+          <p class="card-text">Mate de calabaza forrado en cuero teñido de color lila, con virola metálica decorada en relieve.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$14.500</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
+
+  <!-- Card 5 -->
   <div class="col">
-    <div class="card">
-      <img src="./img/mate/mate5.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Mate de madera torneada simple</h5>
-        <p class="card-text">Mate clásico de madera, liso y sin adornos, con virola de acero inoxidable.</p>
-        <p> <strong>$11.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/mate/mate5.jpeg" class="card-img-top" alt="Mate de madera torneada simple">
+        <div class="card-body">
+          <h5 class="card-title">Mate de madera torneada simple</h5>
+          <p class="card-text">Mate clásico de madera, liso y sin adornos, con virola de acero inoxidable.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$11.000</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
+
+  <!-- Card 6 -->
   <div class="col">
-    <div class="card">
-      <img src="./img/mate/mate6.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Mate de calabaza con base de cuero</h5>
-        <p class="card-text">Mate de calabaza natural con base de cuero cosido.</p>
-        <p> <strong>$13.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/mate/mate6.jpeg" class="card-img-top" alt="Mate de calabaza con base de cuero">
+        <div class="card-body">
+          <h5 class="card-title">Mate de calabaza con base de cuero</h5>
+          <p class="card-text">Mate de calabaza natural con base de cuero cosido.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$13.000</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
+
+  <!-- Card 7 -->
   <div class="col">
-    <div class="card">
-      <img src="./img/mate/mate7.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Mate de madera con virola grabada</h5>
-        <p class="card-text">Mate de madera pulida con virola de alpaca grabada con diseños geométricos.</p>
-        <p> <strong>$16.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/mate/mate7.jpeg" class="card-img-top" alt="Mate de madera con virola grabada">
+        <div class="card-body">
+          <h5 class="card-title">Mate de madera con virola grabada</h5>
+          <p class="card-text">Mate de madera pulida con virola de alpaca grabada con diseños geométricos.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$16.000</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
+
+  <!-- Card 8 -->
   <div class="col">
-    <div class="card">
-      <img src="./img/mate/mate8.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Mate de calabaza con virola y pie metálico</h5>
-        <p class="card-text">Mate de calabaza con pie metálico y virola de alpaca decorada.</p>
-        <p> <strong>$22.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/mate/mate8.jpeg" class="card-img-top" alt="Mate de calabaza con virola y pie metálico">
+        <div class="card-body">
+          <h5 class="card-title">Mate de calabaza con virola y pie metálico</h5>
+          <p class="card-text">Mate de calabaza con pie metálico y virola de alpaca decorada.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$22.000</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
+
+  <!-- Card 9 -->
   <div class="col">
-    <div class="card">
-      <img src="./img/mate/mate9.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Mate de acero inoxidable rosa</h5>
-        <p class="card-text">Mate de acero inoxidable color rosa con interior térmico.</p>
-        <p> <strong>$17.500</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/mate/mate9.jpeg" class="card-img-top" alt="Mate de acero inoxidable rosa">
+        <div class="card-body">
+          <h5 class="card-title">Mate de acero inoxidable rosa</h5>
+          <p class="card-text">Mate de acero inoxidable color rosa con interior térmico.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$17.500</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
+
+  <!-- Card 10 -->
   <div class="col">
-    <div class="card">
-      <img src="./img/mate/mate10.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Mate de cerámica blanco</h5>
-        <p class="card-text">Mate de cerámica esmaltada de forma redonda.</p>
-        <p> <strong>$12.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+    <div class="card h-100">
+      <a href="#" class="text-decoration-none text-dark">
+        <img src="./img/mate/mate10.png" class="card-img-top" alt="Mate de cerámica blanco">
+        <div class="card-body">
+          <h5 class="card-title">Mate de cerámica blanco</h5>
+          <p class="card-text">Mate de cerámica esmaltada de forma redonda.</p>
+        </div>
+      </a>
+      <div class="card-footer d-flex">
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <strong>$12.000</strong>
+        </div>
+        <div class="w-50 d-flex justify-content-center align-items-center">
+          <a class="btn btn-success" href="#" role="button">Comprar</a>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
